<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nishtha.demo.UserRegistration">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iVLB"
        android:src="@drawable/ic_app_logo"
        android:foregroundGravity="center"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tVReg"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_below="@id/iVLB"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tVL"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:hint="@string/hint_signup_name"
        android:drawableLeft="@drawable/ic_person_black_18dp"
        android:id="@+id/editTextUsername"
        android:layout_below="@+id/tVL"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_signup_email"
        android:drawableLeft="@drawable/ic_email_black_18dp"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/editTextUsername"
        android:layout_marginTop="10dp"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/hint_signup_pwd"
        android:drawableLeft="@drawable/ic_lock_black_18dp"
        android:id="@+id/editTextPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editTextEmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password_note"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnReg"
        android:textColor="@color/white"
        android:id="@+id/buttonRegister"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="40dp" />

</RelativeLayout>
