<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nishtha.demo.UserLogin">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iVLB"
        android:src="@drawable/ic_app_logo"
        android:foregroundGravity="center"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tVLI"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_below="@id/iVLB"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tVL"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:hint="@string/hint_login_email"
        android:drawableLeft="@drawable/ic_email_black_18dp"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/tVL"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/hint_login_pwd"
        android:drawableLeft="@drawable/ic_lock_black_18dp"
        android:id="@+id/editTextPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editTextEmail" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnL"
        android:textColor="@color/white"
        android:id="@+id/buttonLogin"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="20dp" />


    <TextView
        android:layout_width="fill_parent"
        android:paddingTop="20dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:text="@string/tvSUH"
        android:id="@+id/register"
        android:layout_below="@id/buttonLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
